--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -127,4 +127,7 @@
     <string name="loading_ringtone" msgid="6523322777415268044">"Загрузка мелодии звонка..."</string>
     <string name="control_set_alarm" msgid="2194676418924016327">"Установить будильник"</string>
     <string name="control_set_alarm_with_existing" msgid="1128169496817859490">"Будильник установлен на <xliff:g id="TIME">%s</xliff:g>"</string>
+    <string name="math_title">Математические задачки</string>
+    <string name="math_summary">Для отключения будильника необходимо решить пример</string>
+    <string name="math_dialog">Вы проснулись?</string>
 </resources>
